Fix main page layout problems

--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -21,27 +21,24 @@
 
 .city-cards {
   flex: 1;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: center;
-}
-
-wa-city-weather-card {
-  flex: 1;
-  min-width: 30%;
-  max-width: 30%;
-  padding: 20px;
-  box-sizing: border-box;
-  cursor: pointer;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+  row-gap: 10px;
+  padding: 10px 0;
 
   @media (max-width: $screen-md) {
-    min-width: 50%;
-    max-width: 50%;
+    grid-template-columns: 1fr 1fr;
   }
 
   @media (max-width: $screen-sm) {
-    min-width: 100%;
-    max-width: 100%;
+    grid-template-columns: 1fr;
   }
+}
+
+wa-city-weather-card {
+  box-sizing: border-box;
+  cursor: pointer;
+  width: 90%;
 }
